# team-digest

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Contributing.md  MANIFEST.in  Makefile  README.md  SALES.md  SECURITY.md  SUPPORT.md  USAGE.md  __init__.py  config.json  config.yaml  demo_team_mock.py  digest.bat  manifest.in  mkdocs.yml  out.json  post_digest.py  pyproject.toml  requirements.lock.txt  requirements.txt  team_digest_version.py  team_email_digest.py  verify_digest.py  weekly_digest.py
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: autotag.yml  ci.yml  ci.yml.txt  cleanup-digests.yml  docs.yml  (+13 more)
.trash/: cleanup.ps1
.venv-110/: pyvenv.cfg
.venv-test/: pyvenv.cfg
configs/: prod.yml
docs/: LOG_FORMAT.md  QUICKSTART.md  SUPPORT.md  WORKFLOWS.md  index.md
logs/: notes-2025-10-13.md  notes-2025-10-14.md  notes-2025-10-15.md  notes-2025-10-16.md  notes-2025-10-17.md
outputs/: daily_2025-10-09.md  daily_2025-10-12.md  digest_2025-10-01_2025-10-06.md  digest_example.md  first.md  from_testpypi.md  local_test.md  weekly.md  weekly_2025-09-29_2025-10-05.md
scripts/: Save-Utf8NoBom.ps1  check_examples.py  ci_build_digests.py  ci_copy_examples.py  ci_verify_examples.py  diagnose_weekly.py  digest_aggregate.py  digest_daily.py  post_to_slack.py  publish_digests.py  sort_actions.py
site/: 404.html  index.html  viewer.html
tests/: conftest.py  test_parse_examples.py
(+27 files in other folders)
