[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team-digest"
version = "1.1.4"
description = "Generate team digests from logs/emails, post to Slack, and automate on Windows."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Anuraj Deol" }]

dependencies = [
  "PyYAML>=6,<7",
  "python-dateutil>=2.8,<3",
  "regex>=2023.0.0",
  "requests>=2.31,<3",
  "tqdm>=4,<5",
]

[project.urls]
Homepage = "https://github.com/anurajdeol90/team-digest"
Issues    = "https://github.com/anurajdeol90/team-digest/issues"

[project.scripts]
# If your CLI main() is in team_email_digest.py (recommended now):
team-digest = "team_email_digest:main"
# If you later move main() elsewhere, update the target accordingly.

[tool.setuptools]
include-package-data = true
# Keep these top-level modules available so the CLI target can import them:
py-modules = ["team_email_digest","team_digest_runtime","slack_delivery","team_digest_version"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["team_digest*"]

[tool.setuptools.package-data]
# Ship the examples inside the wheel for customers
team_digest = ["examples/**"]
